packages/@winglang/wingc/src/jsify/snapshots/preflight_nested_object_with_inflight_init.snap
---
source: packages/@winglang/wingc/src/jsify/tests.rs
---
## Code

```w

    class Inner {
      pub inflight var value: num;
      pub inflight increment() { this.value += 1; }
      new() {}
      inflight new() { this.value = 42; }
    }

    class Outer {
      pub inner: Inner;
      new() { this.inner = new Inner(); }
      inflight new() { this.inner.increment(); }
    }

    let o = new Outer();
    test "test" {
      // Access only the field - the outer's $inflight_init should still be called
      // so that `increment()` runs, making value 43 (42 from inner init + 1 from outer init).
      assert(o.inner.value == 43);
    }
    
```

## inflight.$Closure1-1.cjs

```js
"use strict";
const $helpers = require("@winglang/sdk/lib/helpers");
const $macros = require("@winglang/sdk/lib/macros");
module.exports = function({ $o, $o_inner }) {
  class $Closure1 {
    constructor($args) {
      const {  } = $args;
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
    async handle() {
      $helpers.assert($helpers.eq($o_inner.value, 43), "o.inner.value == 43");
    }
  }
  return $Closure1;
}
//# sourceMappingURL=inflight.$Closure1-1.cjs.map
```

## inflight.Inner-1.cjs

```js
"use strict";
const $helpers = require("@winglang/sdk/lib/helpers");
const $macros = require("@winglang/sdk/lib/macros");
module.exports = function({  }) {
  class Inner {
    async increment() {
      this.value += 1;
    }
    async $inflight_init() {
      this.value = 42;
    }
  }
  return Inner;
}
//# sourceMappingURL=inflight.Inner-1.cjs.map
```

## inflight.Outer-1.cjs

```js
"use strict";
const $helpers = require("@winglang/sdk/lib/helpers");
const $macros = require("@winglang/sdk/lib/macros");
module.exports = function({  }) {
  class Outer {
    constructor($args) {
      const { $this_inner } = $args;
      this.$this_inner = $this_inner;
    }
    async $inflight_init() {
      (await this.$this_inner.increment());
    }
  }
  return Outer;
}
//# sourceMappingURL=inflight.Outer-1.cjs.map
```

## preflight.cjs

```js
"use strict";
const $stdlib = require('@winglang/sdk');
const $macros = require("@winglang/sdk/lib/macros");
const $platforms = ((s) => !s ? [] : s.split(';'))(process.env.WING_PLATFORMS);
const $outdir = process.env.WING_SYNTH_DIR ?? ".";
const $wing_is_test = process.env.WING_IS_TEST === "true";
const std = $stdlib.std;
const $helpers = $stdlib.helpers;
const $extern = $helpers.createExternRequire(__dirname);
const $types = require("./types.cjs");
const $PlatformManager = new $stdlib.platform.PlatformManager({platformPaths: $platforms});
class $Root extends $stdlib.std.Resource {
  constructor($scope, $id) {
    super($scope, $id);
    $helpers.nodeof(this).root.$preflightTypesMap = { };
    let $preflightTypesMap = {};
    $helpers.nodeof(this).root.$preflightTypesMap = $preflightTypesMap;
    class Inner extends $stdlib.std.Resource {
      constructor($scope, $id, ) {
        super($scope, $id);
      }
      static _toInflightType() {
        return `
          require("${$helpers.normalPath(__dirname)}/inflight.Inner-1.cjs")({
          })
        `;
      }
      get _liftMap() {
        return ({
          "increment": [
          ],
          "$inflight_init": [
          ],
          "value": [
          ],
        });
      }
    }
    class Outer extends $stdlib.std.Resource {
      constructor($scope, $id, ) {
        super($scope, $id);
        this.inner = new Inner(this, "Inner");
      }
      static _toInflightType() {
        return `
          require("${$helpers.normalPath(__dirname)}/inflight.Outer-1.cjs")({
          })
        `;
      }
      _liftedState() {
        return {
          ...(super._liftedState?.() ?? {}),
          $this_inner: $stdlib.core.liftObject(this.inner),
        };
      }
      get _liftMap() {
        return ({
          "$inflight_init": [
            [this.inner, ["increment"]],
          ],
        });
      }
    }
    class $Closure1 extends $stdlib.std.AutoIdResource {
      _id = $stdlib.core.closureId();
      constructor($scope, $id, ) {
        super($scope, $id);
        $helpers.nodeof(this).hidden = true;
      }
      static _toInflightType() {
        return `
          require("${$helpers.normalPath(__dirname)}/inflight.$Closure1-1.cjs")({
            $o: ${$stdlib.core.liftObject(o)},
            $o_inner: ${$stdlib.core.liftObject(o.inner)},
          })
        `;
      }
      get _liftMap() {
        return ({
          "handle": [
            [o, []],
            [o.inner, ["value"]],
          ],
          "$inflight_init": [
            [o, []],
            [o.inner, []],
          ],
        });
      }
    }
    const o = new Outer(this, "Outer");
    globalThis.$ClassFactory.new("@winglang/sdk.std.Test", std.Test, this, "test:test", new $Closure1(this, "$Closure1"));
  }
}
const $APP = $PlatformManager.createApp({ outdir: $outdir, name: "main", rootConstruct: $Root, isTestEnvironment: $wing_is_test, entrypointDir: process.env['WING_SOURCE_DIR'], rootId: process.env['WING_ROOT_ID'] });
$APP.synth();
//# sourceMappingURL=preflight.cjs.map
```

## types.cjs

```js
const std = require("@winglang/sdk").std;
const $types = {};
module.exports = $types;
```

